<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <ImageView
        style="@style/menuGlasmorph_layout"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:alpha="0.2"
        android:contentDescription="@string/button_theme"
        app:layout_constraintEnd_toStartOf="@+id/layout_btn_menus"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/btn_theme"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@string/button_theme"
        android:padding="6dp"
        style="@style/theme_settings_icon"
        app:layout_constraintEnd_toStartOf="@+id/layout_btn_menus"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/layout_btn_menus"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:alpha="0.2"
        android:contentDescription="@string/button_back"
        android:src="@drawable/bg_button_glassmorph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/menuGlasmorph"/>

    <ImageButton
        android:id="@+id/btn_menu"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@string/button_back"
        android:padding="6dp"
        android:src="@drawable/ic_menu_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/menuGlasmorph"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ic_github"
            style="@style/iconTint"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/image_github"
            android:src="@drawable/ic_github" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="32dp"
            android:layout_toStartOf="@+id/ic_github"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_greetings"
                style="@style/textColor.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/good_night_reviewer"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="4dp"
                android:contentDescription="@string/image_lines_breaker"
                android:scaleType="fitXY"
                android:src="@drawable/ic_line_braker_header" />

            <TextView
                style="@style/textColor.Thin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_above="@+id/search_bar_container"
            style="@style/textColor.Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/lets_find_your_favorite_users"
            android:textAlignment="center"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout android:id="@+id/search_bar_container"
            style="@style/textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="16dp"
            app:startIconDrawable="@drawable/ic_search_white"
            app:endIconMode="clear_text"
            android:layout_alignParentBottom="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/search_bar_value"
                android:inputType="text"
                android:singleLine="false"
                android:hint="@string/search_username"
                android:padding="0dp"
                android:textSize="12sp"
                style="@style/editTextSearchBar"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.2"
            style="@style/listItemContainer"
            android:contentDescription="@string/image_bg_layout_sheet" />

        <ProgressBar
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:visibility="gone"
            style="@style/loader"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:listitem="@layout/item_list_user"/>

        <com.dicoding.githubusersapp.component.EmptyState
            android:id="@+id/view_empty_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:description="@string/empty_desc"
            app:image="@drawable/ic_empty_state"
            app:title="@string/empty_title" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>