<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favorites.FavoritesActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:alpha="0.2"
            android:contentDescription="@string/button_back"
            android:src="@drawable/bg_button_glassmorph" />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:contentDescription="@string/button_back"
            android:padding="6dp"
            android:src="@drawable/ic_chevron_left" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loader"
        style="@style/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        android:visibility="gone"/>

    <com.dicoding.githubusersapp.component.EmptyState
        android:id="@+id/view_empty_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:description="@string/empty_list_favorite"
        app:image="@drawable/ic_empty_state"
        app:title="@string/empty_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_favorites"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        tools:listitem="@layout/item_list_user" />
</androidx.constraintlayout.widget.ConstraintLayout>