<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:alpha="0.2"
                    android:src="@drawable/bg_button_glassmorph"
                    android:contentDescription="@string/button_back"/>

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/button_back"
                    android:padding="6dp"
                    android:src="@drawable/ic_chevron_left" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar_profile"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="60dp"
                    app:civ_border_overlay="true"
                    app:civ_border_width="1dp"
                    tools:ignore="ImageContrastCheck"
                    style="@style/imageCircle"/>

                <LinearLayout
                    android:id="@+id/ll_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/avatar_profile"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_username"
                        style="@style/textColor.Bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_real_name"
                        style="@style/textColor.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:textAlignment="center"
                        android:textSize="12sp" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_text"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="4dp">

                    <LinearLayout
                        android:id="@+id/ll_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toTopOf="parent">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:layout_marginEnd="2dp"
                            android:layout_weight="1"
                            tools:layout_editor_absoluteX="16dp">

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:alpha="0.2"
                                android:background="@drawable/bg_card_glassmorph" />

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentEnd="true"
                                android:layout_margin="4dp"
                                android:contentDescription="@string/repository_icon"
                                android:src="@drawable/ic_repo"
                                style="@style/iconTint"/>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_centerInParent="true"
                                android:layout_marginStart="6dp">

                                <TextView
                                    android:id="@+id/tv_repo_value"
                                    style="@style/textColor.Thin"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentBottom="true"
                                    android:layout_marginStart="16dp"
                                    android:text="@string/zero_dummy"
                                    android:textSize="26sp" />

                                <TextView
                                    style="@style/textColor.Regular"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentBottom="true"
                                    android:layout_marginStart="4dp"
                                    android:layout_toEndOf="@+id/tv_repo_value"
                                    android:text="@string/repository" />
                            </RelativeLayout>
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:layout_marginStart="2dp"
                            android:layout_weight="1"
                            tools:layout_editor_absoluteX="16dp">

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:alpha="0.2"
                                android:background="@drawable/bg_card_glassmorph" />

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentEnd="true"
                                android:layout_margin="4dp"
                                android:contentDescription="@string/location_icon"
                                android:src="@drawable/ic_location"
                                style="@style/iconTint"/>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="6dp"
                                android:paddingHorizontal="6dp">

                                <TextView
                                    android:id="@+id/tv_location_lable"
                                    style="@style/textColor.Regular"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/location"
                                    android:textSize="20sp" />

                                <TextView
                                    android:id="@+id/tv_location_value"
                                    style="@style/textColor.Thin"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/tv_location_lable"
                                    android:ellipsize="end"
                                    android:maxLines="2"
                                    android:textSize="12sp" />
                            </RelativeLayout>
                        </RelativeLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/ll_2"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginVertical="4dp"
                        app:layout_constraintTop_toBottomOf="@+id/ll_1">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:alpha="0.2"
                            android:background="@drawable/bg_card_glassmorph" />

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="4dp"
                            android:layout_marginBottom="4dp"
                            android:contentDescription="@string/company_icon"
                            android:src="@drawable/ic_company_white"
                            style="@style/iconTint"/>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="6dp"
                            android:paddingHorizontal="6dp">

                            <TextView
                                android:id="@+id/tv_company_lable"
                                style="@style/textColor.Regular"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/company"
                                android:textAlignment="center"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/tv_company_value"
                                style="@style/textColor.Thin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tv_company_lable"
                                android:ellipsize="end"
                                android:maxLines="2"
                                android:textAlignment="center"
                                android:textSize="12sp" />
                        </RelativeLayout>
                    </RelativeLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rl_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.2"
                    android:background="@drawable/bg_white_corner_radius_top"
                    android:contentDescription="@string/image_bg_layout_sheet" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp">

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabs_follows"
                        style="@style/tabsLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/view_follows"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>

            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_content_desc"
        style="@style/fabVavorite"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>